[package]
name = "fft-resampler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5.4", features = ["all-codecs"] }
clap = { version = "4.5.2", features = ["derive"] }
image = "0.25.0"
spectrum-analyzer = "1.5.0"
audio-visualizer = "0.4.0"
